fixed the max-width size and the gap in destination-meta

--- a/starter-code/index.css
+++ b/starter-code/index.css
@@ -103,7 +103,7 @@ select {
   padding-bottom: 4rem;
 }
 .grid-container p:not([class]) {
-  max-width: 45ch;
+  max-width: 50ch;
 }
 
 @media (min-width: 45rem) {
@@ -492,7 +492,7 @@ body {
     font-size: 6rem !important;
   }
   .grid-container--destination .destination-info .destination-meta {
-    gap: 6rem;
+    gap: min(6vw, 6rem);
     justify-content: flex-start;
   }
 }
