--- a/styles/sass/utility/_utility-classes.scss
+++ b/styles/sass/utility/_utility-classes.scss
@@ -45,7 +45,7 @@
     padding-inline: 1rem;
     padding-bottom: 4rem;
     p:not([class]) { // only applying for paragraphs without classes
-        max-width: 45ch;
+        max-width: 50ch;
     }
 }
 
